--- a/shell-scripts/353-only/.asoundrc
+++ b/shell-scripts/353-only/.asoundrc
@@ -1,5 +1,6 @@
 # anbernic-audio alsa config
 # dmix + softvol
+# RG353V Only!  For other rk3566 devices, use the .asoundrc for the RG503
 
 pcm.!default {
         type            plug
